# CRYPTO_MONITOR

./: Cargo.toml  LICENSE  README.md  despliegue.md
config/: crypto_config.toml
data/: crypto_monitor.db
src/: auth.rs  bot.rs  config.rs  crypto_api.rs  db.rs  lib.rs  models.rs  monitor.rs  notify.rs  timer.rs
src/api/: extractors.rs  handlers.rs  middleware.rs  mod.rs  routes.rs
src/bot/: commands.rs  handlers.rs  mod.rs
src/coingecko/: mod.rs
src/config/: crypto_config.rs  mod.rs
src/db/: mod.rs
src/exchanges/: binance.rs  binance_api.rs  config.rs  errors.rs  kucoin.rs  mod.rs  symbols.rs  types.rs
