[package]
name = "crypto-monitor"
version = "0.1.0"
edition = "2021"
default-run = "crypto-monitor-cli"

[lib]
name = "crypto_monitor"
path = "src/lib.rs"

[[bin]]
name = "crypto-monitor-cli"
path = "src/bin/crypto-monitor.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
teloxide = { version = "0.12", features = ["macros"] }
rusqlite = { version = "0.29", features = ["bundled"] }
chrono = "0.4"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = { version = "0.8", features = ["std_rng"] }
axum = { version = "0.7", features = ["json", "tokio"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.3"
http = "1.0"
log = "0.4"
