[package]
name = "crypto-monitor"
version = "0.1.0"
edition = "2021"
default-run = "crypto-monitor-cli"

[lib]
name = "crypto_monitor"
path = "src/lib.rs"

[[bin]]
name = "crypto-monitor-cli"
path = "src/bin/crypto-monitor.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
teloxide = { version = "0.12", features = ["macros"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["password-hash"] }
rand = { version = "0.8", features = ["std_rng"] }
axum = { version = "0.7", features = ["json", "tokio", "macros"] }
axum-macros = "0.3"
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.3"
http = "1.0"
log = "0.4"
once_cell = "1.8"
toml = "0.8"
binance = "0.20"
kucoin_rs = "0.4.4"
rust_decimal = "1.32"
async-trait = "0.1"
thiserror = "1.0"
tokio-rusqlite = "0.5"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
